Fix finding top-level root in RenderWidgetHostViewGuest.

The current code in

RenderWidgetHostViewGuest::GetTouchSelectionControllerClientManager()

fails to consider the case of a PDF inside another
RenderWidgetHostViewGuest/ChildFrame. This means that touch-selection
editing fails for a PDF being displayed inside a WebView, for
example using the BrowserSample app.

This CL uses GetRootView() instead, which does a better job of
handling the pdf-in-a-webview case.

Bug: 777851
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I4f8be98e88a280da7242266dfec6d06fc3934fed
Reviewed-on: https://chromium-review.googlesource.com/735507
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511252}